<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_VisControl" Id="{f17fd9de-51f2-4c61-a672-f4d49f546fed}">
    <Declaration><![CDATA[TYPE ST_VisControl :
STRUCT
	
	stControlPad	: ST_Vis_ControlPadControl;
	stOperatorPad	: ST_Vis_OperationalControl;


END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>