<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Vis_ControlPadControl" Id="{12054512-4986-4b1f-a114-083f495d38a0}">
    <Declaration><![CDATA[TYPE ST_Vis_ControlPadControl :
STRUCT
	
	bVisInvisibleButton	: BOOL;	
	bVisInvisible		: BOOL;	
	nFramePositionX		: INT;
	nFramePositionY		: INT;
	nButtonPositionX	: INT;
	nButtonPositionY	: INT;
	
	bButtonState_Abort			: BOOL;
	bButtonState_Reset			: BOOL;
	bButtonState_Prepare		: BOOL;	
	bButtonState_Start			: BOOL;
	
	bStateSignalAbortBlue		: BOOL;
	bStateSignalAbortYellow		: BOOL;
	bStateSignalAbortGreen		: BOOL;
	
	bStateSignalResetYellow		: BOOL;
	bStateSignalResetGreen		: BOOL;

	bStateSignalPrepareYellow	: BOOL;
	bStateSignalPrepareGreen	: BOOL;

	bStateSignalExecuteYellow	: BOOL;
	bStateSignalExecuteGreen	: BOOL;	

	bAbortSequenceStateInvisible	: BOOL;
	bResetSequenceStateInvisible	: BOOL;
	bPrepareSequenceStateInvisible	: BOOL;
	bStartSequenceStateInvisible	: BOOL;
	
	iAbortSequenceState			: INT;
	iResetSequenceState			: INT;
	iPrepareSequenceState		: INT;
	iStartSequenceState			: INT;	
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>