<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_XMotionStatemachineStates" Id="{a2933a29-587d-4f68-820b-f2e7bbc149db}">
    <Declaration><![CDATA[TYPE ST_XMotionStatemachineStates :
STRUCT
	nAbortState		: INT;
	nResetState		: INT;
	nPrepareState	: INT;
	nStartState		: INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>